--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,53 @@
 body{
     font-family: 'Caveat', 'Dancing+Script', cursive;
     padding-top: 56px;
-    transition: background 0.5s ease;
+    /*transition: background 0.5s ease;*/
 }
 
 body.light {
-    background: linear-gradient(135deg, rgba(255, 233, 233, 0.7), rgba(245, 245, 220, 0.7), rgba(200, 230, 255, 0.7));
+    background: linear-gradient(135deg, #f0f4c3, #e0f7fa);
     background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
+    color: #000; /* Чёрный текст для светлой темы */
 }
 
 body.dark {
-    background: linear-gradient(135deg, rgba(40, 44, 52, 0.8), rgba(58, 68, 102, 0.8), rgba(60, 76, 96, 0.8));
+    background: linear-gradient(135deg, #737d86, #2c3a42);
     background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
+    color: #f5f5f5; /* Молочно-белый цвет текста для тёмной темы */
 }
 
+@keyframes gradientAnimation {
+    0% {
+        background-position: 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 50%;
+    }
+}
+
+
+
+
+/* Светлая тема для квадратов */
+body.light .square {
+    background-color: rgba(0, 123, 255, 0.1); /* Цвет текста при наведении */ /* Прозрачный или светлый фон для квадратов */
+    color: #000; /* Чёрный текст */
+    border: 2px solid #007bff; /* Синяя граница */
+    transition: background-color 0.5s, color 0.5s, border 0.5s;
+}
+
+/* Тёмная тема для квадратов */
+body.dark .square {
+    background-color: #2c3e50; /* Прозрачный или тёмный фон для квадратов */
+    color: #fff; /* Белый текст */
+    border: 2px solid #f1c40f; /* Золотая граница */
+    transition: background-color 0.5s, color 0.5s, border 0.5s;
+}
 
 .navbar-light {
     background-color: #f8f9fa; /* Цвет фона навигационной панели для светлой темы */
@@ -24,7 +58,6 @@ body.dark {
 .navbar-dark {
     background-color: #343a40; /* Цвет фона навигационной панели для темной темы */
     transition: background-color 0.8s ease; /* Плавный переход для навигационной панели */
-
 }
 
 .navbar-nav {
@@ -33,7 +66,6 @@ body.dark {
     background-color: rgba(0, 123, 255, 0.1); /* Цвет фона при наведении */
     color: #007bff; /* Цвет текста при наведении */
 }
-
 
 .nav-link {
     border-radius: 20px; /* Устанавливаем радиус закругления */
