--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,8 @@
 
 body{
     padding-top: 56px;
-    /*transition: background 0.5s ease;*/
     font-family: 'Caveat', 'Dancing+Script', cursive !important;
     font-size: 26px !important;
-}
-
-@media (max-width: 991px) {
-    .navbar-collapse {
-        display: flex;
-        justify-content: space-between; /* Distribute space between menu items and the theme toggle */
-    }
 }
 
 .container{
@@ -20,9 +12,7 @@ body{
 }
 
 body.light {
-    /*background: linear-gradient(135deg, #f0f4c3, #e0f7fa);*/
     background-color: #F9F9F9;
-    /*background-size: 400% 400%;*/
 
 }
 
@@ -33,10 +23,6 @@ body.light .progress-bar {
     color: #030303;
     font-size: 20px;
 }
-
-/*body.light button {*/
-/*    color: #333333;*/
-/*}*/
 
 body.light .navbar-nav {
     background-color: #F9F9F9;
@@ -60,14 +46,12 @@ body.light .bottom {
 
 body.dark {
     background-color: #121212;
-    /*background-size: 400% 400%;*/
-    /*animation: gradientAnimation 15s ease infinite;*/
     color: #E0E0E0;
 }
 
-/* Стили для тёмной темы */
-body.dark .progress-bar {
 
+
+body.dark .progress-bar {
     background-color: #737d86;
     color: #E0E0E0;
     font-size: 20px;
@@ -94,6 +78,37 @@ body.dark .nav-link{
 body.dark .bottom {
     background-color: #737d86;
 }
+
+
+
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    /*padding-top: 300px;*/
+    padding-bottom: 30px;
+}
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 2.5s ease-out, transform 2.5s ease-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 
 
 
@@ -184,30 +199,3 @@ body.dark .bottom {
 /*    transform: scale(1.1);*/
 /*    box-shadow: 0 4px 20px rgba(0, 123, 255, 0.5);*/
 /*}*/
-
-.centered {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
-    /*padding-top: 300px;*/
-    /*padding-bottom: 300px;*/
-}
-
-.fade-in {
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 2.5s ease-out, transform 2.5s ease-out;
-}
-
-.fade-in.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
