--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     font-size: 26px !important;
 }
 
+
 .navbar-nav li {
     text-align: center;
     margin-bottom: 0.5rem;
@@ -17,6 +18,16 @@ body{
     top: 0;
 }
 
+/*#themeToggle {*/
+
+/*}*/
+
+/*body.light .navbar-nav li {*/
+
+/*}*/
+/*body.dark .navbar-nav li {*/
+
+/*}*/
 
 /*button {*/
 /*    background-color: #92b0d2 !important;*/
