--- a/responsivenes.css
+++ b/responsivenes.css
@@ -1,4 +1,9 @@
 
+.container{
+    max-width: 1400px;
+    margin: 0px auto;
+    padding: 0px 15px;
+}
 
 
 @media (max-width: 1200px) {
@@ -43,6 +48,6 @@
     /*    top: 0;*/
     /*}*/
 
-
 }
+
 
